All the features are complete, packaging now

--- a/package.json
+++ b/package.json
@@ -26,13 +26,16 @@
     "files": [
       "Backend/",
       "Frontend/",
-      "data/",
       "node_modules/",
       "package.json"
     ],
     "win": {
       "target": "nsis",
       "icon": "build/icon.ico"
+    },
+    "nsis": {
+      "oneClick": false,
+      "allowToChangeInstallationDirectory": true
     }
   }
 }
